[*] Fixed herotext and herodemo alignment

--- a/css/style.css
+++ b/css/style.css
@@ -54,5 +54,10 @@ a {
 }
 
 .herotext {
+    display: block;
+    
+}
+
+.tophalf {
     display: flex;
 }
